# cascade

./: CMakeLists.txt
include/cascade/: object.hpp  service.hpp
include/cascade/detail/: service_impl.hpp
src/applications/demos/: CMakeLists.txt  contour_detection_dpl.cpp  contour_detection_dpl.hpp  contour_detection_perf.cpp  extract_contour_detection_model.sh  video_receive.py
src/applications/demos/dairy_farm/: CMakeLists.txt  client.cpp  filter_dpl.cpp  infer_dpl.cpp  video_receive.py
src/applications/demos/dairy_farm/dairy_farm_cfg/n0/: derecho.cfg
src/applications/demos/dairy_farm/dairy_farm_cfg/n1/: derecho.cfg
src/applications/demos/dairy_farm/dairy_farm_cfg/n2/: derecho.cfg
src/applications/demos/dairy_farm/dairy_farm_cfg/n3/: derecho.cfg
src/applications/demos/dairy_farm/dairy_farm_cfg/n4/: derecho.cfg
src/applications/demos/demo_cfg/n0/: derecho.cfg  dpl_dlls.cfg
src/applications/demos/demo_cfg/n1/: derecho.cfg
src/applications/demos/demo_cfg/n2/: derecho.cfg
src/applications/demos/demo_cfg/n3/: derecho.cfg
src/applications/demos/demo_cfg/n4/: derecho.cfg
src/core/: object.cpp
src/service/: fuse_client.cpp  server.cpp  service.cpp
src/service/cfg/n0/: derecho.cfg
src/service/cfg/n1/: derecho.cfg
src/service/cfg/n2/: derecho.cfg
src/service/cfg/n3/: derecho.cfg
src/service/cfg/n4/: derecho.cfg  dfg.json  dpl_dlls.cfg
src/service/data_path_logic/: CMakeLists.txt  azure_upload_dpl.cpp  cnn_classifier_dpl.cpp  cnn_classifier_perf.cpp  console_printer_dpl.cpp  image_pipeline_dpl.cpp  video_receive.py
src/service/data_path_logic/cnn_classifier_cfg/n0/: derecho.cfg
src/service/data_path_logic/cnn_classifier_cfg/n1/: derecho.cfg
src/service/data_path_logic/cnn_classifier_cfg/n2/: derecho.cfg
src/service/image_pipeline/: CMakeLists.txt  frame_client.cpp  image_classifier_dpl.cpp  image_classifier_dpl.hpp  video_capture.py
src/service/image_pipeline/image_pipeline_cfg/n0/: derecho.cfg
src/service/image_pipeline/image_pipeline_cfg/n1/: derecho.cfg
src/service/image_pipeline/image_pipeline_cfg/n2/: derecho.cfg
src/service/image_pipeline/protos/: cascade_farm.proto
src/service/python/: cascade_py.cpp
